syntax = "proto3";

option csharp_namespace = "SpaDotNetCoreApp.Protos";

package templates;

service GrpcTemplates {
	rpc GetTemplate2 (GetTemplate2Request) returns (GetTemplate2Reply);
}

message GetTemplate2Request {
	string param1 = 1;
	int32 param2 = 2;
}

message GetTemplate2Reply {
	string content = 1;
}
